...
                                    <outlet property="delegate" destination="xiB-1J-sxo" id="KWQ-kU-TWh"/>
                                </connections>
                            </tableView>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JNi-TJ-pc9">
                                <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Personajes Marvel" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H0d-la-w0
                                        <rect key="frame" x="101.5" y="18" width="172.5" height="24"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <nil key="highlightedColor"/>
                                    </label>
...
                                <constraints>
                                    <constraint firstAttribute="height" constant="60" id="luy-TH-RPB"/>
                                </constraints>
                            </view>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="ListCharacter">
                            <bool key="isElement" value="YES"/>
                        </accessibility>
                        <constraints>
                            <constraint firstItem="N1I-PV-byk" firstAttribute="bottom" secondItem="we3-3S-cjV" secondAttribute="bottom" constant="-20" id="3ZL-YX-AW2"/>
                            <constraint firstItem="JNi-TJ-pc9" firstAttribute="trailing" secondItem="we3-3S-cjV" secondAttribute="trailing" id="AiM-CA-OdO"/>
                            <constraint firstItem="N1I-PV-byk" firstAttribute="trailing" secondItem="we3-3S-cjV" secondAttribute="trailing" id="TaC-8O-w46"/>
...
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="L1G-AZ-ITG">
                                <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dzY-PR-982">
                                        <rect key="frame" x="20" y="15" width="30" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="buttonBack"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="30" id="3OY-B0-h5f"/>
                                            <constraint firstAttribute="height" constant="30" id="pZh-d5-8XJ"/>
                                        </constraints>
                                        <state key="normal" image="arrow-89-64"/>
                                        <connections>
...
                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="DetailCharacter">
                            <bool key="isElement" value="YES"/>
                        </accessibility>
                        <constraints>
                            <constraint firstItem="L1G-AZ-ITG" firstAttribute="top" secondItem="ogO-1q-fWL" secondAttribute="top" id="A3S-YT-Zgo"/>
                            <constraint firstItem="ogO-1q-fWL" firstAttribute="trailing" secondItem="wQI-ik-UsD" secondAttribute="trailing" constant="10" id="Sq8-d2-bro"/>
                            <constraint firstItem="L1G-AZ-ITG" firstAttribute="leading" secondItem="ogO-1q-fWL" secondAttribute="leading" id="edU-dm-1y3"/>
...
