...
    func loadDataCharacter(data: ListCharacter) {
        
        self.dataCharacter = data
        
        self.lbTitleNameCharacter.text = "Personaje \(String((dataCharacter?.name!)!))"
        
        self.lbTitleList.text = "Historias en las que aparece"
        lbTitleList.layer.borderColor = UIColor.black.cgColor
        lbTitleList.layer.borderWidth = 1.5
        lbTitleList.layer.cornerRadius = 5
        lbTitleList.backgroundColor = UIColor(red: 252/255, green: 124/255, blue: 97/255, alpha: 1.0)
        
        let urlString = (dataCharacter?.thumbnail?.path)!+"."+(dataCharacter?.thumbnail?.fileExtension)!
...
