...
                                <accessibility key="accessibilityConfiguration">
                                    <bool key="isElement" value="YES"/>
                                </accessibility>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TbD-0Q-UaN">
                                <rect key="frame" x="60" y="469" width="255" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="buttonStart"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
                                <state key="normal" title="START">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="startAction:" destination="fw2-cP-q6T" eventType="touchUpInside" id="EwF-wm-Gld"/>
...
